fix subscribe button bug on mobile devices

--- a/app/assets/stylesheets/mail-chimp.css.scss
+++ b/app/assets/stylesheets/mail-chimp.css.scss
@@ -60,14 +60,61 @@ font-family: 'Source Sans Pro', sans-serif;
 font-weight: 400;
 }
 
-#mc_embed_signup input.email {font-family: 'Source Sans Pro', sans-serif; font-weight: 400; font-size:1.8em; display:inline-block; padding:8px 0; margin:10px 0 0 6px; text-indent:15px; width:250px; height:68px; min-width:130px; background-color:transparent;}
-#mc_embed_signup input.button {display:inline-block;  width:120px; margin:10px 3px 20px 6px; min-width:120px;}
+#mc_embed_signup input.email {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+  font-size: 1.8em;
+  display: inline-block;
+  padding: 8px 0;
+  margin: 10px 0 0 6px;
+  text-indent: 15px;
+  width: 250px;
+  height: 68px;
+  min-width: 130px;
+  background-color: transparent;
+}
 
-#mc_embed_signup div#mce-responses {float:left; top:-1.4em; padding:0em .5em 0em .5em; overflow:hidden; width:90%;margin: 0 5%; clear: both;}
-#mc_embed_signup div.response {margin:1em 0; padding:1em .5em .5em 0; font-weight:bold; float:left; top:-1.5em; z-index:1; width:80%;}
-#mc_embed_signup #mce-error-response {display:none;}
-#mc_embed_signup #mce-success-response {color:#529214; display:none;}
-#mc_embed_signup label.error {display:block; float:none; width:auto; margin-left:1.05em; text-align:left; padding:.5em 0;}
+#mc_embed_signup input.button {
+  display: inline-block;
+  margin: 10px 3px 20px 6px;
+  min-width: 120px;
+}
+
+#mc_embed_signup div#mce-responses {
+  float: left;
+  top: -1.4em;
+  padding: 0em .5em 0em .5em;
+  overflow: hidden;
+  width: 90%;
+  margin: 0 5%;
+  clear: both;
+}
+
+#mc_embed_signup div.response {
+  margin: 1em 0;
+  padding: 1em .5em .5em 0;
+  font-weight: bold;
+  float: left;
+  top: -1.5em;
+  z-index: 1;
+  width: 80%;
+}
+
+#mc_embed_signup #mce-error-response {
+  display: none;
+}
+#mc_embed_signup #mce-success-response {
+  color: #529214;
+  display: none;
+}
+#mc_embed_signup label.error {
+  display: block;
+  float: none;
+  width: auto;
+  margin-left: 1.05em;
+  text-align: left;
+  padding: .5em 0;
+}
 
 @media (max-width: 480px){
   #mc-embedded-subscribe {
